Fixing color of letter in correct or incorrect , word wrap solution for mobiles devices

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,15 @@
   }
 }
 
+#text-container {
+  word-wrap: break-word;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Centrar las palabras */
+}
 #letter {
   color: white;
+  word-wrap: break-word;
   position: relative;
 
   &.active::before {
